--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   command = "npm run build"
-  publish="CS-Build-Week-1/game-of-life/build"
-  base = "CS-Build-Week-1/game-of-life"
+  publish="game-of-life/build"
+  base = "game-of-life"
